hermes_ws/log/build_2024-10-08_12-02-45/cameras/stdout_stderr.log
running egg_info
writing ../../build/cameras/cameras.egg-info/PKG-INFO
writing dependency_links to ../../build/cameras/cameras.egg-info/dependency_links.txt
writing entry points to ../../build/cameras/cameras.egg-info/entry_points.txt
writing requirements to ../../build/cameras/cameras.egg-info/requires.txt
writing top-level names to ../../build/cameras/cameras.egg-info/top_level.txt
reading manifest file '../../build/cameras/cameras.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/cameras/cameras.egg-info/SOURCES.txt'
running build
running build_py
creating /home/hermes/Hermes/hermes_ws/build/cameras/build
creating /home/hermes/Hermes/hermes_ws/build/cameras/build/lib
creating /home/hermes/Hermes/hermes_ws/build/cameras/build/lib/cameras
copying cameras/camera.py -> /home/hermes/Hermes/hermes_ws/build/cameras/build/lib/cameras
copying cameras/__init__.py -> /home/hermes/Hermes/hermes_ws/build/cameras/build/lib/cameras
copying cameras/camera_stream.py -> /home/hermes/Hermes/hermes_ws/build/cameras/build/lib/cameras
copying cameras/cameras_node.py -> /home/hermes/Hermes/hermes_ws/build/cameras/build/lib/cameras
running install
running install_lib
copying /home/hermes/Hermes/hermes_ws/build/cameras/build/lib/cameras/camera.py -> /home/hermes/Hermes/hermes_ws/install/cameras/lib/python3.10/site-packages/cameras
copying /home/hermes/Hermes/hermes_ws/build/cameras/build/lib/cameras/cameras_node.py -> /home/hermes/Hermes/hermes_ws/install/cameras/lib/python3.10/site-packages/cameras
byte-compiling /home/hermes/Hermes/hermes_ws/install/cameras/lib/python3.10/site-packages/cameras/camera.py to camera.cpython-310.pyc
byte-compiling /home/hermes/Hermes/hermes_ws/install/cameras/lib/python3.10/site-packages/cameras/cameras_node.py to cameras_node.cpython-310.pyc
  File "/home/hermes/Hermes/hermes_ws/install/cameras/lib/python3.10/site-packages/cameras/cameras_node.py", line 6
    def main()
              ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/hermes/Hermes/hermes_ws/install/cameras/lib/python3.10/site-packages/cameras-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/cameras/cameras.egg-info to /home/hermes/Hermes/hermes_ws/install/cameras/lib/python3.10/site-packages/cameras-0.0.0-py3.10.egg-info
running install_scripts
Installing cameras_node script to /home/hermes/Hermes/hermes_ws/install/cameras/lib/cameras
writing list of installed files to '/home/hermes/Hermes/hermes_ws/build/cameras/install.log'
